--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -2,6 +2,17 @@
 $cor-padrao: #c24e4b;
 $cor-auxiliar: #1e2c35;
 $cor-branca: #fff;
+$raio: 0.3em;
+
+@mixin borda-arredondada {
+  -webkit-border-radius: $raio;
+  border-radius: $raio;
+}
+
+@mixin sombra-padrao {
+  -webkit-box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+   box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+}
 /** Geral **/
 body {
   font-family: "Roboto Slab", serif;
@@ -99,9 +110,8 @@ header .container {
   border: 0;
   padding: .6em;
   font-size: 1.2em;
-  -webkit-border-radius: 0.3em;
-  border-radius: 0.3em;
-  box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  @include borda-arredondada;
+  @include sombra-padrao;
   font-weight: bold;
 }
 
@@ -225,9 +235,8 @@ header .container {
   width: 210px;
   height: 38px;
   font-size: 1.2em;
-  -webkit-border-radius: 0.3em;
-  border-radius: 0.3em;
-  box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  @include borda-arredondada;
+  @include sombra-padrao;
   margin-left: 2em;
 }
 
@@ -310,8 +319,7 @@ textarea {
   width: 100%;
   margin-bottom: .8em;
   padding: 4px 8px;
-  -webkit-border-radius: 0.3em;
-  border-radius: 0.3em;
+  @include borda-arredondada;
   border: 2px solid #ccc;
 }
 
@@ -323,9 +331,8 @@ textarea {
   width: 210px;
   height: 38px;
   font-size: 1.2em;
-  -webkit-border-radius: 0.3em;
-  border-radius: 0.3em;
-  box-shadow: 0 2px 6.65px 0.35px rgba(0, 0, 0, 0.3);
+  @include borda-arredondada;
+  @include sombra-padrao;
 }
 
 /** Footer **/
