--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -4,7 +4,7 @@ $cor-auxiliar: #1e2c35;
 $cor-branca: #fff;
 $raio: 0.3em;
 
-@mixin borda-arredondada {
+@mixin borda-arredondada($raio: 0.3em) {
   -webkit-border-radius: $raio;
   border-radius: $raio;
 }
@@ -110,7 +110,7 @@ header .container {
   border: 0;
   padding: .6em;
   font-size: 1.2em;
-  @include borda-arredondada;
+  @include borda-arredondada(50px);
   @include sombra-padrao;
   font-weight: bold;
 }
