--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,9 +1,10 @@
-
+//Variaveis usadas no meu SASS
 $cor-padrao: #c24e4b;
 $cor-auxiliar: #1e2c35;
 $cor-branca: #fff;
 $raio: 0.3em;
 
+//Mixins usados no meu Sass
 @mixin borda-arredondada($raio: 0.3em) {
   -webkit-border-radius: $raio;
   border-radius: $raio;
