--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -66,24 +66,26 @@ header .container {
   top: -.5em;
   font-size: 1.2em;
   font-weight: lighter;
-}
 
-.menu-principal ul {
-  padding-left: 0;
-}
+  ul {
+    padding-left: 0;
+  }
 
-.menu-principal li {
-  display: inline-block;
-  width: 5em;
-}
+  li {
+    display: inline-block;
+    width: 5em;
+  }
 
-.menu-principal a {
-  color: white;
-  text-decoration: none;
-}
+  a {
+    color: white;
+    text-decoration: none;
 
-.menu-principal a:hover {
-  text-decoration: underline;
+    
+    // a:hover {
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
 
 /** Destaque **/
